add read only chat room

--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "@reach/router": "^1.2.1",
+    "apollo-boost": "^0.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.3.1",
+    "graphql": "^14.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "turbolinks": "^5.2.0"
   },
